--- a/ProxyUnsetter/SettingsForm.resx
+++ b/ProxyUnsetter/SettingsForm.resx
@@ -117,20 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="FieldMeasureText" xml:space="preserve">
-    <value>333</value>
-  </data>
-  <data name="FieldSeparator" xml:space="preserve">
-    <value>.</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="SetProxy" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SetProxy.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="UnsetProxy" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\UnsetProxy.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="UnsetProxyPng" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\UnsetProxy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
